--- a/meta/makefile.ttl
+++ b/meta/makefile.ttl
@@ -3,6 +3,7 @@
 @prefix : <http://ontologi.es/doap-deps#> .
 
 <http://purl.org/NET/cpan-uri/dist/PerlX-Maybe/project>
-	:test-requirement    [ :on "Test::More 0.61"^^:CpanId ];
-	:runtime-requirement [ :on "perl 5.006"^^:CpanId ].
+	:test-requirement       [ :on "Test::More 0.61"^^:CpanId ];
+	:runtime-recommendation [ :on "PerlX::Maybe::XS"^^:CpanId ].
+	:runtime-requirement    [ :on "perl 5.006"^^:CpanId ].
 
