no parallel testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
 before_script:
   - coverage-setup
 script:
-  - prove -l -j$((SYSTEM_CORES + 1)) $(test-dirs)   # parallel testing
+  - prove -l $(test-dirs)
 after_success:
   - coverage-report
 
