--- a/meta/makefile.ttl
+++ b/meta/makefile.ttl
@@ -3,6 +3,7 @@
 @prefix : <http://ontologi.es/doap-deps#> .
 
 <http://purl.org/NET/cpan-uri/dist/PerlX-Maybe/project>
+	:runtime-requirement    [ :on "Scalar::Util"^^:CpanId ];
 	:test-requirement       [ :on "Test::More 0.61"^^:CpanId ];
 	:runtime-recommendation [ :on "PerlX::Maybe::XS"^^:CpanId ];
 	:develop-recommendation [ :on "Dist::Inkt"^^:CpanId ];
