--- a/.github/workflows/ci.ini
+++ b/.github/workflows/ci.ini
@@ -1,6 +1,6 @@
 [failfast]
 false
 [os]
-'ubuntu-latest', 'windows-latest'
+'ubuntu-latest', 'windows-latest', 'macos-latest'
 [perl]
-'5.10.1', '5.12', '5.14', '5.16', '5.18', '5.20', '5.22', '5.24', '5.26', '5.28', '5.30', '5.32'
+'5.10.1', '5.12', '5.14', '5.16', '5.18', '5.20', '5.22', '5.24', '5.26', '5.28', '5.30', '5.32', '5.34'
