--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,8 +78,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os:                 [ 'ubuntu-latest', 'windows-latest' ]
-        perl:               [ '5.8.5', '5.8.6', '5.8.7', '5.8.8', '5.8.9', '5.10', '5.10.1', '5.12', '5.14', '5.16', '5.18', '5.20', '5.22', '5.24', '5.26', '5.28', '5.30', '5.32' ]
+        os:                 [ 'ubuntu-latest', 'windows-latest', 'macos-latest' ]
+        perl:               [ '5.10.1', '5.12', '5.14', '5.16', '5.18', '5.20', '5.22', '5.24', '5.26', '5.28', '5.30', '5.32', '5.34' ]
         coverage:           [ false ]
         threaded:           [ null ]
         extra_dependencies: [ true ]
